--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@ Made with 100% organic ingredients, Eco Beestede keeps your furry friends smelli
       <div class="product">
         <img src="product2.jpg" alt="Forest Whisper">
 		<img src="product3.jpg" alt="Forest Whisper">
-        <h3>Forest Whisper</h3>
-        <p>An earthy, calming scent.</p>
+        <p>We are dedicated to providing toxin-free, cruelty-free perfumes that capture the true beauty of nature without synthetic additives or harmful chemicals</p>
       </div>
     </div>
   </section>
